- Downloaded EOS scripts use the new Event Based script mode since that mirrors the 
  behavior on Milovana.

Fixed Bugs:
- Fixed Milovana Downloads. They should work again.
- EOS scripts center text again if orientation argument is not given.
- Fixed goto in a UI eval call not blocking the Scene until the Scene has switched.
  This has led to (mostly) EOS scripts not behaving as expected.

=================
Version 1.6.1.0
=================
Fixed Bugs:
- Fixed a potential deadlock in the Metronome.
- Removed a lot of unessessary SFX reloading in the metronome.

=================
Version 1.6.0.0
=================

New Features:
- New Debug interface for reading the debug log and running debug commands.
- Scene selection inplemented. Teases can define which Scenes are eligible
  to start from and the Title Card of those Scenes.
- Node debugger implemented.
- Button to open the Engine Settings folder added to debug tab.

Changes:
- Qml cache on Windows is in the same Folder as the settings since Windows
  doesn't have a dedicated cache folder.

Fixed Bugs:
- Scene Resources update if the resource is removed or changed somewhere else.
- Fixed some constellations of Scene transitions that failed to transition
  correctly.
- Fixed a race condition when executing scripts. The new implementation is completely
  decoupled from the UI. Even if the UI elements are deleted while executing
  the scripts, the script will continue to execute though the commands will do nothing.

=================
Version 1.5.1.0
=================

Fixed Bugs:
- Fixed a bug calling showText in the EvalRunner not workng.

=================
Version 1.5.0.0
=================

New Features:
- Dialog editor and PlayerTextBox functions to support Dialogs has been added.
  - getDialog: Gets a Dialog object's data.
  - showDialog: Shows a Dialog with the configured parameters
- Achievement and Save systems implemented
- New button in Layout to hide the UI of the player.